--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
+# Python bytecode
+*.pyc
+__pycache__/
+
+# Build / packaging
+*.egg-info/
+dist/
+build/
+*.whl
+
+# Virtual environments
+.venv/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# DB file
 task_list.json
